omni/tests/goldens/types/unknown_type_05.err
tests/goldens/types/unknown_type_05.omni:1:12: error: unknown type "Mystery5"
  let value5:Mystery5 = 1
             ^~~ hint: import or declare the type before use
tests/goldens/types/unknown_type_05.omni:1:1: error: cannot assign int to Mystery5
  let value5:Mystery5 = 1
  ^~~ hint: adjust the expression or type annotation
